opening hours table displays better

--- a/templates/opening_hours.html
+++ b/templates/opening_hours.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered mb-2">
+<table class="table table-bordered mb-2" id="opening_hours_table">
     <tbody>
     {% for record in translations.opening_hours %}
     <tr>
