--- a/static/css/contact_styles.css
+++ b/static/css/contact_styles.css
@@ -47,6 +47,14 @@
     margin-left: 0.3rem;
 }
 
+#opening_hours_table {
+    min-height: 80%;
+}
+#opening_hours_table td {
+    text-align: center;        /* Horizontal centering */
+    vertical-align: middle;    /* Vertical centering */
+}
+
 .contact-container {
     display: flex;
     flex-direction: column;
@@ -60,6 +68,12 @@
 
 footer {
   margin-top: 1rem;
+}
+
+@media (min-width: 992px) {
+    #opening_hours_table td {
+        font-size: 1.1rem;
+    }
 }
 
 @media (max-width: 991px) {
