--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -62,17 +62,19 @@
     <hr>
     <!--opening hours-->
     <div class="container mt-5">
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <img src="static/assets/img/entrance.jpg" alt="{{ contact.entrance_image.alt }}"
-                     class="large-contact-content">
-            </div>
-            <div class="col-12 col-md-6">
-                <h2 class="contact-heading">{{ contact.opening_hours.heading }}</h2>
+    <div class="row d-flex align-items-stretch">
+        <div class="col-12 col-md-6">
+            <img src="static/assets/img/entrance.jpg" alt="{{ contact.entrance_image.alt }}"
+                 class="large-contact-content img-fluid">
+        </div>
+        <div class="col-12 col-md-6 d-flex flex-column justify-content-between">
+            <h2 class="contact-heading">{{ contact.opening_hours.heading }}</h2>
+            <div class="opening-hours-content flex-grow-1">
                 {% include "opening_hours.html" %}
             </div>
         </div>
     </div>
+</div>
 
     <hr>
     <!--additional info + contacts-->
