phone to instagram

--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -128,9 +128,9 @@
 
                 </div>
                 <div>
-                    <h2 class="contact-heading"> {{ contact.phone.heading }} </h2>
-                    <a href="tel:+420 222 710 462" class="btn btn-outline-purple">
-                        <i class="bi bi-telephone-fill"></i> +420 222 710 462
+                    <h2 class="contact-heading"> Chat </h2>
+                    <a href="https://www.instagram.com/direct/t/17842514916029460" class="btn btn-outline-purple" target="_blank">
+                        <i class="bi bi-chat-dots-fill"></i> Instagram
                     </a>
                 </div>
             </div>
