--- a/static/css/drink_menu_styles.css
+++ b/static/css/drink_menu_styles.css
@@ -82,6 +82,10 @@
     --bs-tooltip-color: white;
 }
 
+#pdf-logo-large {
+    font-size: clamp(1.1rem, 2vw + 1rem, 1.6rem);
+}
+
 #info_inline{
     font-size: 1rem;
 }
