--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -52,7 +52,7 @@ h1 {
     height: 2.2rem;
 }
 
-.bi{
+.normal-icon{
     font-size: 1.4rem;
 }
 
@@ -63,7 +63,6 @@ h1 {
     color: var(--cream-purple); /* Text color */
     border: 1px solid var(--cream-purple); /* Border color */
     background-color: transparent; /* No background */
-    transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effect */
 }
 
 .btn-outline-purple:hover {
