--- a/templates/about.html
+++ b/templates/about.html
@@ -42,7 +42,7 @@
     <div class="row justify-content-center mt-5">
         <div class="col-12 col-md-6 text-center">
             <a href="https://www.facebook.com/club.termix" class="btn btn-primary-purple">
-                <i class="bi bi-facebook"></i> {{ fb_button_text }}
+                <i class="bi bi-facebook normal-icon"></i> {{ fb_button_text }}
             </a>
         </div>
     </div>
