--- a/templates/base.html
+++ b/templates/base.html
@@ -44,13 +44,13 @@
             <!-- Facebook Logo -->
             <a href="https://www.facebook.com/club.termix/" target="_blank"
                class="nav-link px-3 text-body-secondary">
-                <i class="bi bi-facebook"></i>
+                <i class="bi bi-facebook normal-icon"></i>
             </a>
 
             <!-- Instagram Logo -->
             <a href="https://www.instagram.com/termix_club/" target="_blank"
                class="nav-link px-3 text-body-secondary">
-                <i class="bi bi-instagram"></i>
+                <i class="bi bi-instagram normal-icon"></i>
             </a>
         </div>
 
@@ -101,19 +101,19 @@
         <ul class="nav col-md-4 justify-content-end">
             <li class="nav-item footer-logo">
                 <a href="{{ url_for('home', lang=lang) }}" class="nav-link px-3 text-body-secondary home-scroll-up">
-                    <i class="bi bi-house svg-icon"></i>
+                    <i class="bi bi-house normal-icon"></i>
                 </a>
             </li>
             <li class="nav-item footer-logo">
                 <a href="https://www.facebook.com/club.termix/" target="_blank"
                    class="nav-link px-3 text-body-secondary">
-                    <i class="bi bi-facebook"></i>
+                    <i class="bi bi-facebook normal-icon"></i>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="https://www.instagram.com/termix_club/" target="_blank"
                    class="nav-link px-3 text-body-secondary">
-                    <i class="bi bi-instagram"></i>
+                    <i class="bi bi-instagram normal-icon"></i>
                 </a>
             </li>
         </ul>
