--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -62,82 +62,85 @@
     <hr>
     <!--opening hours-->
     <div class="container mt-5">
-    <div class="row d-flex align-items-stretch">
-        <div class="col-12 col-md-6">
-            <img src="static/assets/img/entrance.jpg" alt="{{ contact.entrance_image.alt }}"
-                 class="large-contact-content img-fluid">
-        </div>
-        <div class="col-12 col-md-6 d-flex flex-column justify-content-between">
-            <h2 class="contact-heading">{{ contact.opening_hours.heading }}</h2>
-            <div class="opening-hours-content flex-grow-1">
-                {% include "opening_hours.html" %}
+        <div class="row d-flex align-items-stretch">
+            <div class="col-12 col-md-6">
+                <img src="static/assets/img/entrance.jpg" alt="{{ contact.entrance_image.alt }}"
+                     class="large-contact-content img-fluid">
+            </div>
+            <div class="col-12 col-md-6 d-flex flex-column justify-content-between">
+                <h2 class="contact-heading">{{ contact.opening_hours.heading }}</h2>
+                <div class="opening-hours-content flex-grow-1">
+                    {% include "opening_hours.html" %}
+                </div>
             </div>
         </div>
     </div>
-</div>
 
     <hr>
-    <!--additional info + contacts-->
-    <div class="container mt-5">
+    <!--contacts-->
+    <div class="container mt-4 mb-4">
         <div class="row">
-            <div class="col-12 col-md-6">
-                <div class="card">
-                    <div class="card-header"></div>
-                    <div class="card-body pt-1">
-                        <div class="d-flex flex-column justify-content-center align-items-center">
+            <div class="col-12 col-md-6 text-center mb-2">
+                <h2 class="contact-heading"> Chat </h2>
+                <a href="https://www.instagram.com/direct/t/17842514916029460" class="btn btn-outline-purple"
+                   target="_blank">
+                    <i class="bi bi-chat-dots-fill normal-icon"></i> Instagram
+                </a>
+            </div>
+            <div class="col-12 col-md-6 text-center">
+                <h2 class="contact-heading"> Email </h2>
+                <a href="mailto:club-termix@club-termix.cz" class="btn btn-outline-purple">
+                    <i class="bi bi-envelope-at-fill"></i> club-termix@club-termix.cz
+                </a>
 
-                            <i class="bi bi-person-check-fill normal-icon mb-1"></i>
-                            {% set info = translations.info %}
-                            <table class="table table-bordered mb-2">
-                                <tbody>
-                                <tr>
-                                    <td class="address text-center">{{ info.ageRestriction }}</td>
-                                </tr>
-                                </tbody>
-                            </table>
+            </div>
+        </div>
+    </div>
 
-                            <i class="bi bi-cash-coin normal-icon mb-1"></i>
-                            <table class="table table-bordered mb-2">
-                                <tbody>
-                                {% for payment in info.payments %}
-                                <tr>
-                                    <td class="address text-center">{{ payment }}</td>
-                                </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
+    <hr>
+    <!--additional info-->
+    <div class="row justify-content-center align-items-center mt-5">
+        <div class="col-md-12 col-lg-8 col-xl-6 text-center">
+            <h2 class="contact-heading">{{ contact.additional_info.heading }}</h2>
+            <div class="card">
+                <div class="card-header"></div>
+                <div class="card-body pt-1">
+                    <div class="d-flex flex-column justify-content-center align-items-center">
 
-                            <i class="bi bi-duffle-fill mb-1 normal-icon"></i>
-                            <table class="table table-bordered mb-2">
-                                <tbody>
-                                <tr>
-                                    <td class="address text-center">{{ info.cloakroom }}</td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                        <i class="bi bi-person-check-fill normal-icon mb-1"></i>
+                        {% set info = translations.info %}
+                        <table class="table table-bordered mb-2">
+                            <tbody>
+                            <tr>
+                                <td class="address text-center">{{ info.ageRestriction }}</td>
+                            </tr>
+                            </tbody>
+                        </table>
+
+                        <i class="bi bi-cash-coin normal-icon mb-1"></i>
+                        <table class="table table-bordered mb-2">
+                            <tbody>
+                            {% for payment in info.payments %}
+                            <tr>
+                                <td class="address text-center">{{ payment }}</td>
+                            </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+
+                        <i class="bi bi-duffle-fill mb-1 normal-icon"></i>
+                        <table class="table table-bordered mb-2">
+                            <tbody>
+                            <tr>
+                                <td class="address text-center">{{ info.cloakroom }}</td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 text-center contact-container">
-                 <div>
-                    <h2 class="contact-heading"> Email </h2>
-                    <a href="mailto:termixclub@gmail.com" class="btn btn-outline-purple">
-                        <i class="bi bi-envelope-at-fill normal-icon"></i> termixclub@gmail.com
-                    </a>
-
-                </div>
-                <div>
-                    <h2 class="contact-heading"> Chat </h2>
-                    <a href="https://www.instagram.com/direct/t/17842514916029460" class="btn btn-outline-purple" target="_blank">
-                        <i class="bi bi-chat-dots-fill normal-icon"></i> Instagram
-                    </a>
-                </div>
-            </div>
         </div>
-
     </div>
-
 </div>
 
 <div class="container mt-3" id="disclaimer">
