--- a/app/static/css/gallery_styles.css
+++ b/app/static/css/gallery_styles.css
@@ -20,6 +20,17 @@
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
 
+#gallery_loose .row > div {
+    max-height: 100vh;
+    justify-content-center
+}
+
+#gallery_loose img {
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: cover; /* Ensures the image covers the container without stretching */
+}
+
 .instagram-frame {
     position: relative;
     width: 100%;
@@ -30,7 +41,7 @@
 }
 
 #large-instagram-icon{
-    height: 5rem;
+    font-size: 5rem;
 }
 
 .btn-ig{
