--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -67,17 +67,17 @@
 
 <div class="container mt-5" id="gallery_loose">
     <!-- Gallery -->
-    <div class="row">
+    <div class="row d-flex justify-content-center">
         {% for i in range(8, 14) %}
-        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0 d-flex justify-content-center">
+        <div class="col-12 col-sm-11 col-xl-6 col-xxl-4 mb-4 mb-lg-0 ">
             <img
                     src="{{ url_for('static', filename='assets/gallery/%02d.jpg' % i) }}"
-                    class="shadow-1-strong rounded mb-4"
+                    class="w-100 shadow-1-strong rounded mb-4"
             />
         </div>
         {% endfor %}
-        <div class="col-lg-4 mb-4 mb-lg-0">
-            <div class="instagram-frame">
+        <div class="col-11 col-sm-10 col-xl-5 col-xxl-4  mb-4 mb-lg-0 ">
+            <div class="w-100 instagram-frame">
                 <a href="https://www.instagram.com/termix_club/" target="_blank">
                     <button type="button" class="btn btn-ig d-flex align-items-center justify-content-center">
                         <i class="bi bi-instagram" id="large-instagram-icon"></i>
