facebook link looks same as instagram in gallery

--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -79,33 +79,24 @@
         <div class="col-11 col-sm-10 col-xl-5 col-xxl-4  mb-4 mb-lg-0 ">
             <div class="w-100 instagram-frame">
                 <a href="https://www.instagram.com/termix_club/" target="_blank">
-                    <button type="button" class="btn btn-ig d-flex align-items-center justify-content-center">
-                        <i class="bi bi-instagram" id="large-instagram-icon"></i>
+                    <button type="button" class="btn frame-btn d-flex align-items-center justify-content-center"
+                    id="ig-frame-btn">
+                        <i class="bi bi-instagram large-icon" ></i>
                         <span class="ms-2">Follow</span>
                     </button>
                 </a>
             </div>
         </div>
-        <!--<div class="col-11 col-sm-10 col-xl-5 col-xxl-4  mb-4 mb-lg-0 ">
+        <div class="col-11 col-sm-10 col-xl-5 col-xxl-4  mb-4 mb-lg-0 ">
             <div class="w-100 instagram-frame">
                 <a href="https://www.facebook.com/club.termix/photos_albums" target="_blank">
-                    <button type="button" class="btn btn-ig d-flex align-items-center justify-content-center">
-                        <i class="bi bi-instagram" id="large-instagram-icon"></i>
+                    <button type="button" class="btn frame-btn d-flex align-items-center justify-content-center"
+                    id="fb-frame-btn">
+                        <i class="bi bi-facebook large-icon" ></i>
                         <span class="ms-2">Albums</span>
                     </button>
                 </a>
             </div>
-        </div>-->
-    </div>
-</div>
-
-<div class="container">
-      <div class="row justify-content-center mt-5">
-        <div class="col-12 col-md-6 text-center">
-            <a href="https://www.facebook.com/club.termix/photos_albums" class="btn btn-primary"
-               id="facebook-albums-link">
-                <i class="bi bi-facebook" id="facebook-icon-large"></i> Albums
-            </a>
         </div>
     </div>
 </div>
