--- a/app/static/css/gallery_styles.css
+++ b/app/static/css/gallery_styles.css
@@ -27,35 +27,34 @@
     border-radius: 8px; /* Optional: make the frame corners rounded */
 }
 
-#large-instagram-icon{
+.large-icon{
     font-size: 5rem;
 }
 
-.btn-ig{
+.frame-btn{
     position: absolute;
     height: 100%;
     width: 100%;
     top: 0%;
     left: 0%;
     font-size: 2rem;
-}
-.btn-ig {
-    background-color: var(--dark-purple); /* Background color on hover */
-    border-color: var(--white-purple); /* Border color */
     transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effect */
 }
+#ig-frame-btn {
+    background-color: var(--dark-purple); /* Background color on hover */
+}
 
-.btn-ig:hover {
+#ig-frame-btn:hover {
     background-color: var(--purple); /* Background color */
-    border-color: var(--whitey-purple); /* Border color on hover */
     color: white; /* Text color on hover */
 }
 
-#facebook-albums-link{
+#fb-frame-btn {
     --facebook-blue:#0165E1;
-    font-size: 2rem;
-    background-color: var(--facebook-blue);
+    background-color: var(--facebook-blue); /* Background color on hover */
 }
-#facebook-icon-large{
-    font-size: 3rem;
+
+#fb-frame-btn:hover {
+    background-color: #2b76e6; /* Background color */
+    color: white; /* Text color on hover */
 }
