--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -71,7 +71,7 @@
         {% for i in range(8, 14) %}
         <div class="col-12 col-sm-11 col-xl-6 col-xxl-4 mb-4 mb-lg-0 ">
             <img
-                    src="{{ url_for('static', filename='assets/gallery/%02d.jpg' % i) }}"
+                    src="{{ url_for('static', filename='assets/gallery/' + str(i) + '.jpg') }}"
                     class="w-100 shadow-1-strong rounded mb-4"
             />
         </div>
