--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -30,25 +30,25 @@
                 </div>
                 <div class="carousel-inner gallery-slide">
                     <div class="carousel-item active gallery-slide">
-                        <img class="gallery-picture" src="static/assets/gallery/01.jpg" width="100%" height="100%">
+                        <img class="gallery-picture" src="static/assets/gallery/1.avif" width="100%" height="100%">
                     </div>
                     <div class="carousel-item gallery-slide">
-                        <img class="gallery-picture" src="static/assets/gallery/02.jpg" width="100%" height="100%">
+                        <img class="gallery-picture" src="static/assets/gallery/2.avif" width="100%" height="100%">
                     </div>
                     <div class="carousel-item gallery-slide">
-                        <img class="gallery-picture" src="static/assets/gallery/03.jpg" width="100%" height="100%">
+                        <img class="gallery-picture" src="static/assets/gallery/3.avif" width="100%" height="100%">
                     </div>
                     <div class="carousel-item gallery-slide">
-                        <img class="gallery-picture" src="static/assets/gallery/04.jpg" width="100%" height="100%">
+                        <img class="gallery-picture" src="static/assets/gallery/4.avif" width="100%" height="100%">
                     </div>
                     <div class="carousel-item gallery-slide">
-                        <img class="gallery-picture" src="static/assets/gallery/05.jpg" width="100%" height="100%">
+                        <img class="gallery-picture" src="static/assets/gallery/5.avif" width="100%" height="100%">
                     </div>
                     <div class="carousel-item gallery-slide">
-                        <img class="gallery-picture" src="static/assets/gallery/06.jpg" width="100%" height="100%">
+                        <img class="gallery-picture" src="static/assets/gallery/6.avif" width="100%" height="100%">
                     </div>
                     <div class="carousel-item gallery-slide">
-                        <img class="gallery-picture" src="static/assets/gallery/07.jpg" width="100%" height="100%">
+                        <img class="gallery-picture" src="static/assets/gallery/7.avif" width="100%" height="100%">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
@@ -71,7 +71,7 @@
         {% for i in range(8, 14) %}
         <div class="col-12 col-sm-11 col-xl-6 col-xxl-4 mb-4 mb-lg-0 ">
             <img
-                    src="{{ url_for('static', filename='assets/gallery/' + str(i) + '.jpg') }}"
+                    src="{{ url_for('static', filename='assets/gallery/' ~ i ~ '.avif') }}"
                     class="w-100 shadow-1-strong rounded mb-4"
             />
         </div>
