entrance image changed to .avif - termic taken picture

--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -64,7 +64,7 @@
     <div class="container mt-5">
         <div class="row d-flex align-items-stretch">
             <div class="col-12 col-md-6">
-                <img src="static/assets/img/entrance.jpg" alt="{{ contact.entrance_image.alt }}"
+                <img src="static/assets/img/entrance.avif" alt="{{ contact.entrance_image.alt }}"
                      class="large-contact-content img-fluid">
             </div>
             <div class="col-12 col-md-6 d-flex flex-column justify-content-between">
